# manga-reader-v2

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
ai-pipeline/: .env.example  pyproject.toml
ai-pipeline/src/manga_reader_ai/: __init__.py  config.py  server.py
ai-pipeline/src/manga_reader_ai/llm/: __init__.py  client.py  prompts.py
ai-pipeline/src/manga_reader_ai/models/: __init__.py  schemas.py
ai-pipeline/src/manga_reader_ai/ocr/: __init__.py
ai-pipeline/src/manga_reader_ai/tts/: __init__.py  manager.py
ai-pipeline/src/manga_reader_ai/vision/: __init__.py
ai-pipeline/src/manga_reader_ai_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
engine/: Cargo.toml  manga_reader.db-shm  manga_reader.db-wal
engine/src/: lib.rs  main.rs
engine/src/archive/: cb7.rs  cbr.rs  cbz.rs  mod.rs
engine/src/db/: mod.rs  models.rs  schema.rs
engine/src/db/migrations/: v1__initial.sql  v2__chapters.sql  v3__search_triggers.sql
engine/src/image/: cache.rs  mod.rs
engine/src/ipc/: mod.rs  protocol.rs
engine/src/panel/: gutter.rs  mod.rs
engine/src/search/: mod.rs
gui-tauri/: .gitignore  README.md  index.html  package-lock.json  package.json
gui-tauri/src/: App.svelte  app.css
gui-tauri/src-tauri/: Cargo.toml  tauri.conf.json
gui-tauri/src-tauri/capabilities/: default.json
gui-tauri/src-tauri/src/: lib.rs  main.rs
gui-tauri/src/components/: MangaCard.svelte  PageView.svelte  ReaderControls.svelte  SearchBar.svelte  ThemeToggle.svelte
gui-tauri/src/lib/stores/: index.js
gui-tauri/src/routes/: Library.svelte  Reader.svelte  Settings.svelte
gui-winui/: MangaReader.csproj  MangaReader.sln  run_xaml.ps1
gui-winui/src/: App.xaml  App.xaml.cs  Converters.cs
gui-winui/src/Controls/: MangaCover.cs  PageView.cs
gui-winui/src/Models/: Manga.cs  Page.cs  ReadingProgress.cs
gui-winui/src/Services/: CacheService.cs  IpcClient.cs
gui-winui/src/ViewModels/: MainViewModel.cs
gui-winui/src/Views/: LibraryPage.xaml  LibraryPage.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  ReaderPage.xaml  ReaderPage.xaml.cs  SettingsPage.xaml  SettingsPage.xaml.cs
plugins/: README.md
plugins/examples/metadata-fetcher/: Cargo.toml
plugins/examples/metadata-fetcher/src/: lib.rs
plugins/examples/translator/: Cargo.toml
plugins/examples/translator/src/: lib.rs
plugins/traits/: Cargo.toml  plugin.rs
