[project]
name = "manga-reader-ai-pipeline"
version = "0.1.0"
description = "AI pipeline for manga reader v2 — vision analysis, OCR, TTS, and LLM integration"
authors = [
    { name = "Nous Research", email = "dev@nousresearch.com" }
]
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "google-genai>=1.0.0",
    "kokoro>=0.9.0",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "moviepy>=2.0.0",
    "aiofiles>=24.0.0",
]

[project.optional-dependencies]
ocr = [
    "easyocr>=1.7.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["manga_reader_ai*"]

[tool.setuptools.package-dir]
"" = "src"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
