[package]
name = "manga-translator-plugin"
version = "0.1.0"
edition = "2021"
description = "Inline translation plugin for Manga Reader v2"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Use a relative path to the shared trait definitions
manga-reader-plugin = { path = "../../traits" }

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
